# uclock

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: lib.rs
uclock-cli/: Cargo.toml
uclock-cli/src/: main.rs
uclock-server/: Cargo.toml
uclock-server/src/: main.rs
